// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`send Comment button: 1 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={0}
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      I’m working to improve this app and make it as useful as possible. Please leave a comment or get in touch!
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      This project is open source.
    </Text>
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        See project in github
      </Text>
    </LHCButton>
  </KeyboardAvoidingView>
</SafeAreaView>
`;

exports[`send Comment button: 2 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={0}
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      I’m working to improve this app and make it as useful as possible. Please leave a comment or get in touch!
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      This project is open source.
    </Text>
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        See project in github
      </Text>
    </LHCButton>
  </KeyboardAvoidingView>
</SafeAreaView>
`;

exports[`should display AboutAppScreen with no errors 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Array [
          Object {
            "flex": 1,
          },
        ],
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      I’m working to improve this app and make it as useful as possible. Please leave a comment or get in touch!
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#2980b6",
          "margin": 10,
          "opacity": 1,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Send a Comment
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      This project is open source.
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#2980b6",
          "margin": 10,
          "opacity": 1,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        See project in github
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`showCommentField: 1 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={0}
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      I’m working to improve this app and make it as useful as possible. Please leave a comment or get in touch!
    </Text>
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Send a Comment
      </Text>
    </LHCButton>
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      This project is open source.
    </Text>
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        See project in github
      </Text>
    </LHCButton>
  </KeyboardAvoidingView>
</SafeAreaView>
`;

exports[`showCommentField: 2 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={0}
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      I’m working to improve this app and make it as useful as possible. Please leave a comment or get in touch!
    </Text>
    <View>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        keyboardType="default"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Comment"
        placeholderTextColor="rgba(225,225,225,0.7)"
        rejectResponderTermination={true}
        returnKeyType="done"
        style={
          Object {
            "backgroundColor": "rgba(225,225,225,0.2)",
            "color": "#fff",
            "height": 40,
            "marginBottom": 10,
            "padding": 10,
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <LHCButton
        onSelected={[Function]}
      >
        <Text
          style={
            Object {
              "color": "#fff",
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Send Comment!
        </Text>
      </LHCButton>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 20,
            "margin": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      This project is open source.
    </Text>
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        See project in github
      </Text>
    </LHCButton>
  </KeyboardAvoidingView>
</SafeAreaView>
`;
